# shadowwork

./: BSPM.ipynb  README.md  pyproject.toml
src/shadowork/Data/: DataProvider.py  Readme.md  YFinanceProvider.py
src/shadowork/Janitor/: janitor.py
src/shadowork/Models/: Model.py  Step.py
